--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
         <link rel="stylesheet" href="style.css">
 
@@ -16,7 +17,7 @@
             <form action="https://google.com/search">
             <div class="searchbar">
                 <input type="text" name="q" id="searchbox" size="75px">
-                <div class="input-group-append"> <span class="input-group-text microphone"><img src="images/microphone.png" width="25" height="25"></span> </div>
+                <!--<div class="input-group-append"> <span class="input-group-text microphone"><img src="images/microphone.png" width="25" height="25"></span> </div> --->
             </div>
                 <div class="button">
                     <input type="submit" value="Google Search" id="btn1">
@@ -25,7 +26,13 @@
             </form>
             <div class="advanced">
                 <a href="advanced.html">
-                    <button>Advanced search</button>
+                    <button type="button" class="btn btn-outline-secondary" id="adv"><u>Advanced search</u></button>
+                </a>
+            </div>
+
+            <div class="imgbtn">
+                <a href="img.html">
+                    <button type="button" class="btn btn-outline-secondary" id="adv"><u>Image search</u></button>
                 </a>
             </div>
 
